Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
6.6.1, 6.6.2, 7.0.0, 6.6.3, 7.1.0, 7.0.3, 7.0.2, 7.0.1, 6.6.5, 6.6.4, 7.1.1, 7.0.4
-
Untriaged
-
1
-
Unknown
Description
void AuditFile::close_and_rotate_log() {
|
120 cb_assert(file);
|
121 file.reset();
|
122 if (current_size == 0) {
|
123 remove(open_file_name.c_str());
|
124 return;
|
125 }
|
Trond Norbye - Following up as this is still targeted to 7.1.2. Goal is to take RC3 on Aug 5. Please provide an updated ETA/comment if this is still targeted for 7.1.2 Thanks!