MB-53282: Reset open_time in early return in close_and_rotate_file

If the current file is empty we don't need to keep it around
and delete it and do an early return. This path must also
set the open_time = 0

Change-Id: I7f52ecaa2bc12af3342ff7a5928305820b66bc7a
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/178535
Reviewed-by: Daniel Owen <owend@couchbase.com>
Well-Formed: Restriction Checker
Tested-by: Trond Norbye <trond.norbye@couchbase.com>